Problems in alignment of header fixed

--- a/main.css
+++ b/main.css
@@ -171,7 +171,7 @@ html {
 
 .bulletin-wrapper {
   height: 280px;
-  width: 80%;
+  width: 85%;
   margin: 50px auto;
   background-color: white;
 }
@@ -310,7 +310,8 @@ html {
     padding: 0;
     margin: 0;
     position: relative;
-    right: 75px;
+    right: 25px;
+    margin-left: 20px;
   }
   .logo-and-name-wrapper {
     margin: 0;
@@ -341,17 +342,17 @@ html {
     background-color: white;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     width: fit-content;
   }
   .menu-items {
     color: #354463;
     width: fit-content;
     font-size: 15px;
-    padding: 10px;
+    padding: 8px;
     border-radius: 25px;
     width: fit-content;
-
+    margin-left: 5px;
     font-weight: 500;
   }
   .menu-items:hover {
@@ -447,6 +448,9 @@ html {
 }
 
 @media screen and (min-width: 1024px) {
+  .menu{
+    right: 80px;
+  }
   .quotation-with-name-wrapper {
     margin: 0;
     padding: 0;
